apps/grav-allevatoriumbri/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grav-allevatoriumbri
  labels:
    app: grav-allevatoriumbri
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grav-allevatoriumbri
  template:
    metadata:
      labels:
        app: grav-allevatoriumbri
    spec:
      volumes:
        - name: grav-allevatoriumbri-gs-conf
          configMap:
            name: grav-allevatoriumbri-gs-conf
        - name: grav-allevatoriumbri-git
          emptyDir:
            sizeLimit: 2Gi
      containers:
        - name: grav
          image: grav-gitsync
          volumeMounts:
            - name: grav-allevatoriumbri-gs-conf
              mountPath: /tmp/git-sync
            - name: grav-allevatoriumbri-git
              mountPath: /app/www/public/user
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          startupProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 6
            exec:
              command:
                - cat
                - /app/gitsync_ok

      restartPolicy: Always
