apps/grav-allevatoriumbri/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grav-allevatoriumbri-svc
spec:
  selector:
    app: grav-allevatoriumbri
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
